--- a/_articles/第三期/人间草木/马加丹.md
+++ b/_articles/第三期/人间草木/马加丹.md
@@ -1,6 +1,10 @@
 ---
+title: 金鸡湖的海
 author: 邓伟奇
+heading: false
+entry: false
 ---
+
 死去的风拂过马加丹的海岸。
 
 列夫呛着咳了两下，于是他左手摸向口袋里的小铁壶，但迟疑下又缩了回来，最后他右手压着左手，把全身的重量都压在身下的栏杆上。
