--- a/_articles/第五期/雨季不再来/时差.md
+++ b/_articles/第五期/雨季不再来/时差.md
@@ -1,7 +1,7 @@
 ---
 author: 杨轶涵
 ---
-用“破裂”这样暴力的词来形容我和汤汤的关系并不准确。案件现场并没有留下任何的玻璃渣、或是沾有褐色血迹的刀具，地面平鳖如故，墙壁整洁而光亮。我尝试从裂口里捞出一些痛觉的碎片，可是四壁光滑得失真，收回的手心干燥温热。唯一线索是那段匿名电话，含糊不清地宣告了这段关系的终结，随即又嘱咐我去调查死因，潦草得不像话。
+用“破裂”这样暴力的词来形容我和汤汤的关系并不准确。案件现场并没有留下任何的玻璃渣、或是沾有褐色血迹的刀具，地面平滑如故，墙壁整洁而光亮。我尝试从裂口里捞出一些痛觉的碎片，可是四壁光滑得失真，收回的手心干燥温热。唯一线索是那段匿名电话，含糊不清地宣告了这段关系的终结，随即又嘱咐我去调查死因，潦草得不像话。
  
 总感觉不好辜负这位匿名委托人的心愿，那就从头开始梳理案件好了。
  
