--- a/_articles/第五期/故园/春逝.md
+++ b/_articles/第五期/故园/春逝.md
@@ -1,167 +1,168 @@
 ---
 author: 池谷空
 ---
-    “给我读首诗吧。” 
+“给我读首诗吧。” 
 
-          她抬起头时身躯僵硬地颤抖着。 
+她抬起头时身躯僵硬地颤抖着。 
 
-          松坂望向她苍白而衰惫的面庞，又将目光移到了她枯瘦的手臂上。那细细的手臂、突兀地隆起的关节，让他想起了朽木极易折断的枝条。他的目光垂落下来，落在了她的身旁。 
+松坂望向她苍白而衰惫的面庞，又将目光移到了她枯瘦的手臂上。那细细的手臂、突兀地隆起的关节，让他想起了朽木极易折断的枝条。他的目光垂落下来，落在了她的身旁。 
 
-           “好，你不要动，我读给你听。” 
+ “好，你不要动，我读给你听。” 
 
-          他拾起放在桧木桌台上的薄薄的诗集，摸索着上次翻开时留下的痕迹。指尖触摸到那泛黄而起皱的书角便立马感受到了里面贮存的潮气。他抚平书页，缓缓地、一字不落地读出声来： 
+他拾起放在桧木桌台上的薄薄的诗集，摸索着上次翻开时留下的痕迹。指尖触摸到那泛黄而起皱的书角便立马感受到了里面贮存的潮气。他抚平书页，缓缓地、一字不落地读出声来： 
 
            “漫长的严冬过去了，愁云惨雾 
           不再压向平原，从和煦的南方 
           绽放出明媚的晴天，病态的天空上 
           一切刺眼的污渍被荡涤清除……” 
 
-          他的声音低哑，温柔又亲切，仿佛是盖在矮小灌木丛上的晨雾。她静静地听着， 头半侧着，轻缓地吐着气。松坂从她的半阖的眼帘上看见了正在下落的身心。他忽然止住不读了。 
+他的声音低哑，温柔又亲切，仿佛是盖在矮小灌木丛上的晨雾。她静静地听着， 头半侧着，轻缓地吐着气。松坂从她的半阖的眼帘上看见了正在下落的身心。他忽然止住不读了。 
 
-          少女的鼻翼翕动着，嘴唇半张，耳廓上朦胧浮现的血色就像是她全身上下唯一流露生气的地方；她的手指也因放松而微微蜷曲。他意识到她已经堕入了梦乡。 
+少女的鼻翼翕动着，嘴唇半张，耳廓上朦胧浮现的血色就像是她全身上下唯一流露生气的地方；她的手指也因放松而微微蜷曲。他意识到她已经堕入了梦乡。 
 
-          躺在病床上的女子是松坂的妹妹，绫子。兄妹俩相差两岁。绫子生下来便先天不足，身子单薄，从小体弱多病。上了中学后，战争爆发，她在逃难时感染了肺结核， 从此便一病不起。再后来，随着母亲的去世，绫子的神经也变得衰弱而敏感了起来， 父亲不得不把她送进疗养院里，定期来看望她；但有时也因工作太忙，两三个月都不在家里露面，更别说看望绫子了。于是，作为长子的松坂诚一便担起了照顾妹妹的责任。
+躺在病床上的女子是松坂的妹妹，绫子。兄妹俩相差两岁。绫子生下来便先天不足，身子单薄，从小体弱多病。上了中学后，战争爆发，她在逃难时感染了肺结核， 从此便一病不起。再后来，随着母亲的去世，绫子的神经也变得衰弱而敏感了起来， 父亲不得不把她送进疗养院里，定期来看望她；但有时也因工作太忙，两三个月都不在家里露面，更别说看望绫子了。于是，作为长子的松坂诚一便担起了照顾妹妹的责任。
 
-          松坂放下了手中的诗集，从座椅上起身，轻手轻脚地走出了房间。临走前他瞥见房间靠东的一扇窗户上，明艳的阳光洋洋洒洒地倾泻进来，在床脚上留下了一道金色的烙印。尘埃在阳光的隧道里踏着婉转的舞步，像芭蕾舞演员一样在脚尖上旋转。他顺手把窗帘又往两侧拉了拉，地板瞬间变成了阳光的河床。 
+松坂放下了手中的诗集，从座椅上起身，轻手轻脚地走出了房间。临走前他瞥见房间靠东的一扇窗户上，明艳的阳光洋洋洒洒地倾泻进来，在床脚上留下了一道金色的烙印。尘埃在阳光的隧道里踏着婉转的舞步，像芭蕾舞演员一样在脚尖上旋转。他顺手把窗帘又往两侧拉了拉，地板瞬间变成了阳光的河床。 
 
-          松坂走出了疗养院的大门，浓厚的温暖的气息刹那间急涌过来，像是要把他吞并、溶解似的。他却只感到那浮动着的冲动和自己内里的沉滞格格不入。 
+松坂走出了疗养院的大门，浓厚的温暖的气息刹那间急涌过来，像是要把他吞并、溶解似的。他却只感到那浮动着的冲动和自己内里的沉滞格格不入。 
 
-          松坂漫步于春光笼罩的隅田川河畔，两岸的樱树抽出新芽。宽敞的道路两旁，店铺大门紧闭，大多都破落得连招牌上的字也掉了色；板壁肮脏，门帘残破，只有稀稀疏疏的几个小贩在路边售卖糖果。曾经住满人的板条屋的屋顶的脏污就算日日暴露在阳光底下也无法彻底洗净。纸拉门上贴着从报刊上剪下来的美人画。街道没有一处不透露着败落和萧条。
+松坂漫步于春光笼罩的隅田川河畔，两岸的樱树抽出新芽。宽敞的道路两旁，店铺大门紧闭，大多都破落得连招牌上的字也掉了色；板壁肮脏，门帘残破，只有稀稀疏疏的几个小贩在路边售卖糖果。曾经住满人的板条屋的屋顶的脏污就算日日暴露在阳光底下也无法彻底洗净。纸拉门上贴着从报刊上剪下来的美人画。街道没有一处不透露着败落和萧条。
 
-          战火洗劫了东京的生机和活力。战败后的东京就像是被打倒的人，刚想撑着胳膊坐起来，就立马因为肋间的剧痛而再次趴倒在地，一次次重蹈覆辙。 
+战火洗劫了东京的生机和活力。战败后的东京就像是被打倒的人，刚想撑着胳膊坐起来，就立马因为肋间的剧痛而再次趴倒在地，一次次重蹈覆辙。 
 
-          一个人力车夫从后方缓步走来，尽管从松坂的位置看来只有小指甲盖那么大，但他还是迅速地认了出来。现在这些人力车夫为了挣钱，都变得难缠了起来。松坂暗暗地想，还是赶紧逃离他们的视线为好。他加快了脚步，往前走去。 
+一个人力车夫从后方缓步走来，尽管从松坂的位置看来只有小指甲盖那么大，但他还是迅速地认了出来。现在这些人力车夫为了挣钱，都变得难缠了起来。松坂暗暗地想，还是赶紧逃离他们的视线为好。他加快了脚步，往前走去。 
 
-          春风徐徐，妄图钻进松坂的袖口、领口、鞋跟里。或许是因太阳升高的缘故、又或是因这风过于热切，他感到胸口和背部都闷热无比。他解开了学生服外套的扣子， 露出洁白的衬衫。 
+春风徐徐，妄图钻进松坂的袖口、领口、鞋跟里。或许是因太阳升高的缘故、又或是因这风过于热切，他感到胸口和背部都闷热无比。他解开了学生服外套的扣子， 露出洁白的衬衫。 
 
-          这一段路何时变得如此长？松坂不禁感到有些郁闷，有些不耐烦。但这如同跳动的蟋蟀一般应和着春天的呼唤的情感，不知不觉间也变成了苍白的颓废。 
+这一段路何时变得如此长？松坂不禁感到有些郁闷，有些不耐烦。但这如同跳动的蟋蟀一般应和着春天的呼唤的情感，不知不觉间也变成了苍白的颓废。 
 
-          汗珠一颗颗地从他的头顶渗出来。松坂感到既无力，又空虚。他驻足在了原地。 
+汗珠一颗颗地从他的头顶渗出来。松坂感到既无力，又空虚。他驻足在了原地。 
 
-          低头看着那穿着木屐的双脚，松坂又一次注意到自己指头上的茧子变厚了。这曾经是令他感到欣慰的东西，似乎是他努力的证明，是忍耐痛苦的奖勋。每天看着粗糙的手和起茧的脚，他都能感到一种莫名的满足。可现在，他使劲地盯着指缝、指甲盖、脚背上的青筋，那样的感觉却再也无法被唤醒。 
+低头看着那穿着木屐的双脚，松坂又一次注意到自己指头上的茧子变厚了。这曾经是令他感到欣慰的东西，似乎是他努力的证明，是忍耐痛苦的奖勋。每天看着粗糙的手和起茧的脚，他都能感到一种莫名的满足。可现在，他使劲地盯着指缝、指甲盖、脚背上的青筋，那样的感觉却再也无法被唤醒。 
 
-          车站就在吾妻桥不远处，只要坐上能到达新宿站的列车，他就可以去学校。可是现在，他一点也打不起精神，他感到如果以这样的精神状态和斗志面对同学和师长， 不到一天，他肯定会像石膏一样碎掉的。他轻轻地叹了一口气。 
+车站就在吾妻桥不远处，只要坐上能到达新宿站的列车，他就可以去学校。可是现在，他一点也打不起精神，他感到如果以这样的精神状态和斗志面对同学和师长， 不到一天，他肯定会像石膏一样碎掉的。他轻轻地叹了一口气。 
 
-          这样真的好么？他思忖着。父亲对自己抱有厚望，因为是独子，所以几乎是倾尽家产供他上学，期望着他能飞黄腾达。他自己也明白，父亲年纪已大，往后，家里会愈来愈需要自己。他的肩上背负着自己、父亲、妹妹三个人的命运。 
+这样真的好么？他思忖着。父亲对自己抱有厚望，因为是独子，所以几乎是倾尽家产供他上学，期望着他能飞黄腾达。他自己也明白，父亲年纪已大，往后，家里会愈来愈需要自己。他的肩上背负着自己、父亲、妹妹三个人的命运。 
 
-          松坂在河岸的草地上找到一处不那么潮湿的地方坐下了。一旦放松下来，他的精神就像露出了缝隙一样，立马被有关于绫子的思绪填满。他看着隅田川的水缓缓地流淌，那河水也只是轻轻从他的视野里掠过，不留下一点痕迹，不发出一点声音。 
+松坂在河岸的草地上找到一处不那么潮湿的地方坐下了。一旦放松下来，他的精神就像露出了缝隙一样，立马被有关于绫子的思绪填满。他看着隅田川的水缓缓地流淌，那河水也只是轻轻从他的视野里掠过，不留下一点痕迹，不发出一点声音。 
 
-          他想，如果一直都是这样的平静该多好啊。他感到自己已经和世间万物隔离开来，又好似变得透明，不觉间成了宇宙的器皿。模糊不清的过去、无形间被忽视的现今、轮廓被浅浅勾勒的未来，交叠在一起，汇成溪流，淌过他的身心。现在，什么都不用去思考，任何东西都不会引来烦恼。他感到自己回到了远古时期，回到了母亲的怀抱，回到头脑和躯干都沁润在羊水里的时候。抑或这是战争终于平息的抚慰。 
+他想，如果一直都是这样的平静该多好啊。他感到自己已经和世间万物隔离开来，又好似变得透明，不觉间成了宇宙的器皿。模糊不清的过去、无形间被忽视的现今、轮廓被浅浅勾勒的未来，交叠在一起，汇成溪流，淌过他的身心。现在，什么都不用去思考，任何东西都不会引来烦恼。他感到自己回到了远古时期，回到了母亲的怀抱，回到头脑和躯干都沁润在羊水里的时候。抑或这是战争终于平息的抚慰。 
 
-          突然间，他想给绫子写信了。给绫子写信是在她还没患精神病前松坂的习惯。那时，他为了让绫子不感到孤寂，极力想让生活的气息再次围绕着她，所以无论是多微不足道的事，他都会写进信里。绫子很少回信，但这并没有影响到松坂仍不懈地继续写。而后，到了松坂能每周来看望绫子时，他才发现他写的每一封信都被绫子好好地保存着。当她展开那有些皱的信纸，嗔笑着他写的鸡毛蒜皮的小事时，松坂总会脸涨得通红，但他也时常从那羞耻里嗅出一丝丝甜蜜的喜悦。 
+突然间，他想给绫子写信了。给绫子写信是在她还没患精神病前松坂的习惯。那时，他为了让绫子不感到孤寂，极力想让生活的气息再次围绕着她，所以无论是多微不足道的事，他都会写进信里。绫子很少回信，但这并没有影响到松坂仍不懈地继续写。而后，到了松坂能每周来看望绫子时，他才发现他写的每一封信都被绫子好好地保存着。当她展开那有些皱的信纸，嗔笑着他写的鸡毛蒜皮的小事时，松坂总会脸涨得通红，但他也时常从那羞耻里嗅出一丝丝甜蜜的喜悦。 
 
-          绫子开始有些精神失常后，父亲告诫他不要过多烦扰她，只怕会让她病情加重。自那时起，松坂就再也没给她写过信了。如今，他只感到这份宁静和轻盈或许正是绫子所需要的，他想让这一永恒的时刻留在纸上。 
+绫子开始有些精神失常后，父亲告诫他不要过多烦扰她，只怕会让她病情加重。自那时起，松坂就再也没给她写过信了。如今，他只感到这份宁静和轻盈或许正是绫子所需要的，他想让这一永恒的时刻留在纸上。 
 
-          可一想起绫子憔悴的模样，沉甸甸的苦楚便压住了他迫切的心。绫子那苍白的面影又浮上了他的心头。他觉得还是不要去叨扰她为好。 
+可一想起绫子憔悴的模样，沉甸甸的苦楚便压住了他迫切的心。绫子那苍白的面影又浮上了他的心头。他觉得还是不要去叨扰她为好。 
 
-          啊，万千的思绪好像都顺流而下，瞬息间就飘走了。他感叹道。 
+啊，万千的思绪好像都顺流而下，瞬息间就飘走了。他感叹道。 
 
-          忽然，自行车铃的丁零声从耳后传来，继而伴随着一阵呼喊。 
+忽然，自行车铃的丁零声从耳后传来，继而伴随着一阵呼喊。 
 
-           “松坂君！松坂君！是你吗？” 
+“松坂君！松坂君！是你吗？” 
 
-          松坂蓦地转过头。原来是同学吉川茂之。 
+松坂蓦地转过头。原来是同学吉川茂之。 
 
-           “是吉川君啊，早上好。” 
+“是吉川君啊，早上好。” 
 
-           “真没想到会遇见你，”吉川一边用袖口揩着汗，一边说道，“平常我不走这边，今天例外，给亲戚捎东西正巧路过这儿。话说你怎么没去学校？已经这个点了， 迟到没关系吗？” 
+“真没想到会遇见你，”吉川一边用袖口揩着汗，一边说道，“平常我不走这边，今天例外，给亲戚捎东西正巧路过这儿。话说你怎么没去学校？已经这个点了， 迟到没关系吗？” 
 
-           “嗯。今天家里事忙，可能去不了了。” 
+“嗯。今天家里事忙，可能去不了了。” 
 
-           “啊，又是你妹妹的事？” 
+“啊，又是你妹妹的事？” 
 
-           “嗯。” 
+ “嗯。” 
 
-           “唉，你也太不容易了。我帮你和老师说一下吧，我想他一定会理解你的。况且你平常成绩很好。”吉川笑了笑，爽朗地说道。 
+“唉，你也太不容易了。我帮你和老师说一下吧，我想他一定会理解你的。况且你平常成绩很好。”吉川笑了笑，爽朗地说道。 
 
-           “真是太感谢你了，”松坂有些羞赧，“哪天一起到宫户坐去看剧吧，我请票。” 
+ “真是太感谢你了，”松坂有些羞赧，“哪天一起到宫户坐去看剧吧，我请票。” 
 
-           “没事儿，”吉川挥了挥手，“那么我走啦，否则要赶不上电车了。” 
+ “没事儿，”吉川挥了挥手，“那么我走啦，否则要赶不上电车了。” 
 
-          吉川骑着自行车的身影消失在了路的拐角处。松坂的身边又回归了沉寂。 
+吉川骑着自行车的身影消失在了路的拐角处。松坂的身边又回归了沉寂。 
 
-          他脱下学生帽。微风吹过他额前被汗浸湿的头发，凉意渗进他的额头。 
+他脱下学生帽。微风吹过他额前被汗浸湿的头发，凉意渗进他的额头。 
 
-          远处，云卷呈现出浪涛的气势，朝松坂奔涌而来。天穹高高地悬挂在他的头顶， 周围的气压变低，他感到一阵耳鸣，脊背传来难以名状的刺痛。这一连串的官能体验使他体悟到某种凝重的意味，类似于一种征兆。他不由得颤栗。 
+远处，云卷呈现出浪涛的气势，朝松坂奔涌而来。天穹高高地悬挂在他的头顶， 周围的气压变低，他感到一阵耳鸣，脊背传来难以名状的刺痛。这一连串的官能体验使他体悟到某种凝重的意味，类似于一种征兆。他不由得颤栗。 
 
-          松坂十七岁，他一直认为这个数字有一些微妙的含义。这是个不好的年纪。这是个不祥的时期。 
+松坂十七岁，他一直认为这个数字有一些微妙的含义。这是个不好的年纪。这是个不祥的时期。 
 
-          他站了起来，准备继续向南走去。前阵子结冰的河水才刚刚融化，天空再次赋予大地生命。再过一阵子，河岸的樱树就该缤纷绽放了吧。那时候，街道又要喧闹起来了。他仿佛能够看见在隅田川两岸赏樱的男男女女，他们的嬉笑声恍若萦绕在他的耳畔。 
+他站了起来，准备继续向南走去。前阵子结冰的河水才刚刚融化，天空再次赋予大地生命。再过一阵子，河岸的樱树就该缤纷绽放了吧。那时候，街道又要喧闹起来了。他仿佛能够看见在隅田川两岸赏樱的男男女女，他们的嬉笑声恍若萦绕在他的耳畔。 
 
-          无论何时，大自然都拥有着惊人的恢复能力。不管经历了多少天灾人祸、世纪更替、物种变迁，它总是以温和而宽容的眼光目睹着这一切，不紧不慢地舔舐着伤口。
+无论何时，大自然都拥有着惊人的恢复能力。不管经历了多少天灾人祸、世纪更替、物种变迁，它总是以温和而宽容的眼光目睹着这一切，不紧不慢地舔舐着伤口。
 
-          不知不觉间，松坂来到了吾妻桥旁。桥上车马嚣闹，官兵坐在铺有红色天鹅绒毯子的马车里，来往的行人有些打着伞，有些拄着拐杖，女人们都穿着颜色朴素但纹样各不相同的羽织，无处不透露着江户风情。 
+不知不觉间，松坂来到了吾妻桥旁。桥上车马嚣闹，官兵坐在铺有红色天鹅绒毯子的马车里，来往的行人有些打着伞，有些拄着拐杖，女人们都穿着颜色朴素但纹样各不相同的羽织，无处不透露着江户风情。 
 
-          在这一派恍如隔世的景象前，他怔住了。这分明就是那副描绘吾妻桥的浮世绘。 
+在这一派恍如隔世的景象前，他怔住了。这分明就是那副描绘吾妻桥的浮世绘。 
 
-          过往所见过的画、读过的书，都清晰地出现在脑海里。他感到眼前的一切真实得不可思议。 
+过往所见过的画、读过的书，都清晰地出现在脑海里。他感到眼前的一切真实得不可思议。 
 
-          人们的声音不再是只言片语，而是一整股洪流，强而有力地叙述着美丽的时代的故事。松坂的脑中不禁浮现出隅田川涨水的画面。 
+人们的声音不再是只言片语，而是一整股洪流，强而有力地叙述着美丽的时代的故事。松坂的脑中不禁浮现出隅田川涨水的画面。 
 
-          就在这时，一位撑着伞的年轻姑娘正凝视着松坂的侧颜。 
+就在这时，一位撑着伞的年轻姑娘正凝视着松坂的侧颜。 
 
-          松坂转头一看，姑娘轮廓柔和，五官淡雅，她有着修长而白皙的脖颈和一双细长却有神的眼眸。她淡红的嘴唇微张，像是要说些什么似的。她穿着绞染的羽织，系着一根梅花花纹的腰带。 
+松坂转头一看，姑娘轮廓柔和，五官淡雅，她有着修长而白皙的脖颈和一双细长却有神的眼眸。她淡红的嘴唇微张，像是要说些什么似的。她穿着绞染的羽织，系着一根梅花花纹的腰带。 
 
-          松坂惊觉，这姑娘不是绫子是谁？只是她同松坂以往朝夕相处的绫子有些不同。眼前的绫子并不消瘦，她拥有一种成熟而丰韵的姿色。松坂想，如果绫子健康地长到这个年纪，或许就会是眼前的样子吧。 
+松坂惊觉，这姑娘不是绫子是谁？只是她同松坂以往朝夕相处的绫子有些不同。眼前的绫子并不消瘦，她拥有一种成熟而丰韵的姿色。松坂想，如果绫子健康地长到这个年纪，或许就会是眼前的样子吧。 
 
-           “哥哥！”她丢开了手中的伞，几乎是奔着过来，扑进松坂的臂弯。
+ “哥哥！”她丢开了手中的伞，几乎是奔着过来，扑进松坂的臂弯。
 
-          她的眼中噙满了泪水，双颊紧紧贴着松坂的胸脯，手指像是要嵌进去一样用力地抓着他的衣袖。 
+她的眼中噙满了泪水，双颊紧紧贴着松坂的胸脯，手指像是要嵌进去一样用力地抓着他的衣袖。 
 
-          松坂一时不知道该做什么才好。 
+松坂一时不知道该做什么才好。 
 
-           “绫子，绫子，”他轻抚着她的头发，这时才注意到她正梳着的高岛田发髻，“ 别哭啦，告诉我，这是怎么一回事？” 
+“绫子，绫子，”他轻抚着她的头发，这时才注意到她正梳着的高岛田发髻，“ 别哭啦，告诉我，这是怎么一回事？” 
 
-           “哥哥，我还以为再也见不着你了。我和母亲找了你老半天……” 她伸出袖口， 擦了擦眼泪。随即便抓住松坂的手，说道， “三社祭就要开始了，我们快走吧。” 
+ “哥哥，我还以为再也见不着你了。我和母亲找了你老半天……” 她伸出袖口， 擦了擦眼泪。随即便抓住松坂的手，说道， “三社祭就要开始了，我们快走吧。” 
 
-          他们下了桥，往浅草神社的方向跑去。 
+他们下了桥，往浅草神社的方向跑去。 
 
-           “真是太好了，真是太好了……母亲看见哥哥这副模样，一定会开心得不得了吧。” 
+ “真是太好了，真是太好了……母亲看见哥哥这副模样，一定会开心得不得了吧。” 
 
-          绫子喃喃道。 
+绫子喃喃道。 
 
-          松坂不解，为什么死去的母亲、病重的绫子、逝去的江户时代，会兀然出现在一起？可是看着绫子潮红的脸颊、嘴角荡漾开的笑容，他感到什么话都说不出来了。
+松坂不解，为什么死去的母亲、病重的绫子、逝去的江户时代，会兀然出现在一起？可是看着绫子潮红的脸颊、嘴角荡漾开的笑容，他感到什么话都说不出来了。
  
-          松坂远远望见了神轿剧烈晃动的身影，那是轿中的神灵神力增长的表现。抬着神轿的人们激情高涨，周围人来人往。大行列将穿越雷门、仲见世通、浅草寺，最后抵达浅草神社。母亲正朝他们走来，身后伴着穿着整齐的父亲。他们看起来出奇的年轻。 
+松坂远远望见了神轿剧烈晃动的身影，那是轿中的神灵神力增长的表现。抬着神轿的人们激情高涨，周围人来人往。大行列将穿越雷门、仲见世通、浅草寺，最后抵达浅草神社。母亲正朝他们走来，身后伴着穿着整齐的父亲。他们看起来出奇的年轻。 
 
-           “诚一、绫子，瞧瞧你们，我的孩子……”母亲上下打量着松坂，激动地握着他的手。 
+ “诚一、绫子，瞧瞧你们，我的孩子……”母亲上下打量着松坂，激动地握着他的手。 
 
-           “一家人终于能够团聚了，太好了。神灵果然还是在保佑着我们啊。”父亲神情虔诚，欣慰地说道。 
+ “一家人终于能够团聚了，太好了。神灵果然还是在保佑着我们啊。”父亲神情虔诚，欣慰地说道。 
 
-          松坂一家围在一起，热闹非凡的三社祭人声鼎沸。诚一从那和谐的嘈杂声里感受到了由衷的幸福。绫子健康、母亲健在、父亲温厚，不正是自己一直以来渴望的吗？ 还能有什么比这更美妙吗？他不禁感到有些眩晕。或许，他默默地想，或许我只是想要这一点点、一点点的幸福…… 
+松坂一家围在一起，热闹非凡的三社祭人声鼎沸。诚一从那和谐的嘈杂声里感受到了由衷的幸福。绫子健康、母亲健在、父亲温厚，不正是自己一直以来渴望的吗？ 还能有什么比这更美妙吗？他不禁感到有些眩晕。或许，他默默地想，或许我只是想要这一点点、一点点的幸福…… 
 
-          恍惚间，他的视线变得模糊了起来，他终于面对了自己的疲惫。他认为，自己真应该好好休息一下了。 
+恍惚间，他的视线变得模糊了起来，他终于面对了自己的疲惫。他认为，自己真应该好好休息一下了。 
 
-           “真好啊。”
+“真好啊。”
 
-           “是啊。” 
+ “是啊。” 
 
-          母亲和绫子的声音回响着，本来挤满人的四周竟倏然变得空旷了。 
+母亲和绫子的声音回响着，本来挤满人的四周竟倏然变得空旷了。 
 
-           “瞧，诚一累了。我们走吧。”母亲说道。 
+ “瞧，诚一累了。我们走吧。”母亲说道。 
 
-           “哥哥，总有一天，我们会在樱树下重聚的……一定会。”绫子转过头，低声说道。 
+ “哥哥，总有一天，我们会在樱树下重聚的……一定会。”绫子转过头，低声说道。 
 
-          母亲携着绫子的手，往神社的尽头走去。诚一奋力地呼喊着。可这空间仿佛变成了真空似的，他怎样努力都无法传达。他感到自己的身子沉得像铁，四肢像被拴住了一样无法动弹。 
+母亲携着绫子的手，往神社的尽头走去。诚一奋力地呼喊着。可这空间仿佛变成了真空似的，他怎样努力都无法传达。他感到自己的身子沉得像铁，四肢像被拴住了一样无法动弹。 
 
-          他渐渐被地面吞噬了。
+他渐渐被地面吞噬了。
 
-          刺骨的寒气把松坂从噩梦里拖拽了出来。他惊愕地坐起身子，不住地喘着气。衬衫的领口和背部都被汗水沁得湿透了。 
+刺骨的寒气把松坂从噩梦里拖拽了出来。他惊愕地坐起身子，不住地喘着气。衬衫的领口和背部都被汗水沁得湿透了。 
 
-          早春的夜晚仍然凛冽，河岸一到晚上便冷得如雪地一般。他不该睡在这里；可他也不知道自己是几时昏睡过去的。 
+早春的夜晚仍然凛冽，河岸一到晚上便冷得如雪地一般。他不该睡在这里；可他也不知道自己是几时昏睡过去的。 
 
-          树木投下修长而漆黑的影子，显得周围更加地凄清、死气沉沉。 
+树木投下修长而漆黑的影子，显得周围更加地凄清、死气沉沉。 
 
-          松坂看见月光流洒在河面，被波纹荡开后变成了一尾尾鱼。不知怎的，他被一阵剧烈的悲恸席卷，不由自主地痛哭了起来。他捂着胸口，难以言喻的情绪一个接一个地涌了上来。他感觉自己就像是雨夜里孤独的空玻璃罐，被雨水无情地击打，发出痛苦的呻吟，却怎样也无法彻底破碎。 
+松坂看见月光流洒在河面，被波纹荡开后变成了一尾尾鱼。不知怎的，他被一阵剧烈的悲恸席卷，不由自主地痛哭了起来。他捂着胸口，难以言喻的情绪一个接一个地涌了上来。他感觉自己就像是雨夜里孤独的空玻璃罐，被雨水无情地击打，发出痛苦的呻吟，却怎样也无法彻底破碎。 
 
-          他就这么不停地哭，心里的雨不停地下。也不知道过了多久，他蓦地好像醒悟了什么，发疯了似的朝疗养院的方向跑去。途中他摔倒了好几次，衣服也磨破了，可他顾不着，爬起来便继续跑。 
+他就这么不停地哭，心里的雨不停地下。也不知道过了多久，他蓦地好像醒悟了什么，发疯了似的朝疗养院的方向跑去。途中他摔倒了好几次，衣服也磨破了，可他顾不着，爬起来便继续跑。 
 
-          寒风拥抱了悲戚的少年，而黑夜则吞没了他的孤形只影。他消失在了低垂的夜幕中。 
+寒风拥抱了悲戚的少年，而黑夜则吞没了他的孤形只影。他消失在了低垂的夜幕中。 
 
-··· 
+···
 
-          清晨，医生轻而缓地揭开了那被单，无可奈何地长叹一口气。 
+清晨，医生轻而缓地揭开了那被单，无可奈何地长叹一口气。 
 
-          窗户和门都半掩着。前一秒还流着泪的人们匆匆地走了。 
+窗户和门都半掩着。前一秒还流着泪的人们匆匆地走了。 
 
-          春天的早晨忽地结霜了
+春天的早晨忽地结霜了
+![image](https://github.com/user-attachments/assets/62d3e922-107a-4b26-8647-5f44576255c3)
