--- a/_articles/第五期/雨季不再来/洋流裂片.md
+++ b/_articles/第五期/雨季不再来/洋流裂片.md
@@ -1,9 +1,10 @@
 ---
 author: 衔环
 ---
-冷暖流交汇的地方会有鱼群。
+> 冷暖流交汇的地方会有鱼群。
 澳洲闷热黏腻，潮湿的琴房里，冷热间我们成了两尾鱼。
- 
+> {:.text-center}
+
 虽早在芜杂的现实琐碎中失去了联系，但是在那晚之后，我仍旧不断地试图以回忆捞起关于他们的碎片，可那些碎裂的东西远不够完整。所以我选择把关于他们的一切再转述给你，我的朋友，你得理解，这就像一种卸下了愧疚的遗忘。我终于能捏着酸痛的脖颈，摆着手往远处走，把影子越走越小，直到成为一个微小到难以甄别的黑点也不再回头。
  
 话是这么说，不过真到讲的时候，不是自己的故事总是难开口的。要知道我只是一个在吧台后协助调酒的兼职，按照主顾的话，也仅是负责把各类的液体按配剂倒进雪克杯，再把摇晃着的混合物顺着食管倒进客人的胃袋里的人。
