--- a/_articles/第五期/间奏/夜晚一口吃掉我的纸飞机.md
+++ b/_articles/第五期/间奏/夜晚一口吃掉我的纸飞机.md
@@ -8,3 +8,52 @@ poem: true
 将它化开，
 它一头冲进
 夜晚撕开的肚皮
+
+ 二、
+我拿着纸飞机走进夜晚
+两手空空回来，
+就如捧着一麻袋蠕动的湿答答的心跳
+回来带着残缺的双手;
+我流出金灿灿的小溪
+触角蔓延遍身
+回来的时候山河湖海涌动;
+我从胸里掏出一棵老树
+在咸海里写下一颗炽热的太阳
+牵拖着太阳的裙尾回来
+发现我的根从未缠住。
+
+三、
+我沿着找了一路
+找到远远的
+向天上找刚刚失去的纸飞机，
+回到小屋里
+在起点找我的纸飞机，
+在舔着闭上的眼睛的漆黑里，
+在做纸飞机前什么都还未有的桌前，
+在我身上衣服里的每一处角落，
+在明天、再明天，被时间淋浴的暗黄夜晚里
+
+四、
+吃下纸飞机的夜晚风平浪静
+又或将它喂饱后开始扩胀?
+它会不会舔一舔嘴
+打翻一个桶?
+今后我每天都做纸飞机，乘着
+随机无意的一瞬间
+把纸飞机甩进消失的夜晚，
+我们谁也不说，不言而合
+
+五、
+我构想了一千种失去纸飞机的方式:
+第一只飞进夜晚
+第二只被阿姨从日光灯普照的白面地板上拾起
+第三只像一只滑行的乌鸫扑腾一下掠过当代监狱的墙头
+第四只是一只缓缓浸透在水面的小船，湿得像抽泣一般
+第五只轻轻躺在盛满有机的故事的垃圾桶上
+第六只惊慌失措地划破你，沾上鲜血后尖叫
+第七只下起了厚重的雨，洒遍了揉杂在大地里的人们
+第八只一口吃掉了夜晚，动荡瞬间我的意识所剩无几
+第九只我丝毫无法摆布它，它踉跄地扑扑离开
+第十只再也按捺不住了，撕开愤怒的胸腔直直冲向天空
+破裂处嘶吼回荡，震碎了你我
+第一千零一只纸飞机啊，之前在时间中流走的都还在?
