--- a/_articles/第五期/序言/序言.md
+++ b/_articles/第五期/序言/序言.md
@@ -20,5 +20,5 @@ author: 杨谦好
 再一次醒来的时候窗外下起了雨。我确信这是夏日在预告着它的到来，因为我又再一次闻到了独属夏日落雨时的石灰气味。 
 
 欢迎来到2024年的夏天。 是为序。 
-![](/img/Links/序言.jpg)
+![](/img/Links/序言.JPG)
 {:.caption.bottom.right.inside caption="钱楚程 Maggie Qian"}
